<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/response_message"
                android:text="@string/empty"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clientIDLayout"
                android:layout_marginBottom="20dp"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_id"
                    android:maxLength="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black"
                    android:focusable="true"
                    android:selectAllOnFocus="true"
                    android:hint="@string/enter_client_id" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/applicationSecretLayout"
                android:layout_marginBottom="20dp"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/applicationSecret"
                    android:maxLength="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black"
                    android:hint="@string/enter_application_secret" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/senderIDLayout"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                style="@style/TextInputLayoutStyle"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sender_id"
                    android:maxLength="11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black"
                    android:hint="@string/enter_sender_id" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_marginBottom="20dp"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:maxLength="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:hint="@string/enter_phone_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/messageLayout"
                android:layout_marginBottom="20dp"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message"
                    android:maxLength="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black"
                    android:hint="@string/enter_message" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btn_continue"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:backgroundTint="?attr/colorPrimary"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:layout_marginBottom="64dp"
            android:text="@string/send_sms"/>
    </LinearLayout>


  </ScrollView>